RESOLVED FIXED142155
Lots of: ERROR: Unhandled web process message 'WebPageGroupProxy:RemoveAllUserContentFilters'
https://bugs.webkit.org/show_bug.cgi?id=142155
Summary Lots of: ERROR: Unhandled web process message 'WebPageGroupProxy:RemoveAllUse...
Simon Fraser (smfr)
Reported 2015-03-01 17:02:54 PST
https://build.webkit.org/results/Apple%20Yosemite%20Debug%20WK2%20(Tests)/r180869%20(2416)/results.html Lots of tests are spewing: ERROR: Unhandled web process message 'WebPageGroupProxy:RemoveAllUserContentFilters' /Volumes/Data/slave/yosemite-debug/build/Source/WebKit2/WebProcess/WebProcess.cpp(633) : virtual void WebKit::WebProcess::didReceiveMessage(IPC::Connection &, IPC::MessageDecoder &)
Attachments
LOL (1.27 KB, application/octet-stream)
2015-03-02 16:44 PST, Brady Eidson
no flags
LOL 2 (1.27 KB, patch)
2015-03-02 16:46 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-03-02 16:44:04 PST
Brady Eidson
Comment 2 2015-03-02 16:46:08 PST
WebKit Commit Bot
Comment 3 2015-03-02 17:37:35 PST
Comment on attachment 247720 [details] LOL 2 Clearing flags on attachment: 247720 Committed r180912: <http://trac.webkit.org/changeset/180912>
WebKit Commit Bot
Comment 4 2015-03-02 17:37:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.