Lots of: ERROR: Unhandled web process message WebPageGroupProxy:RemoveAllUserContentFilters https://bugs.webkit.org/show_bug.cgi?id=142155

Reviewed by Simon Fraser.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::didReceiveMessage): Return after handling WebPageGroupProxy messages
  instead of logging an error.


Canonical link: https://commits.webkit.org/160243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180912 268f45cc-cd09-0410-ab3c-d52691b4dbfc